Oct 21st 2023 First Commit

--- a/后端2.md
+++ b/后端2.md
@@ -3137,7 +3137,7 @@ public class MyDao {
 > >
 > > 方法区
 
-- 堆
+- 堆（heap space）
 
   - 说明
 
@@ -3251,11 +3251,32 @@ public class MyDao {
 
 - 直接内存
 
+  - 直接内存并不在《Java虚拟机规范》中，所以并不属于java运行时内存区域。在JDK1.4中引入了NIO机制，使用了直接内存，主要为了解决以下两个问题
+    - Java堆中的对象如果不再使用要回收，回收是会影响对象的创建和使用
+    - IO操作比如读文件，需要先把文件读入直接内存（缓冲区）再把数据复制到Java堆中。现在直接放入直接内存即可，同时Java堆上维护了直接内存的地址引用，减少了数据复制的开销。写文件也是类似的思路。
   
 
 
 
 #### 内存溢出
+
+> 参数设置
+>
+> > 栈：-Xss栈大小
+> >
+> > 堆：total 和 max 一般设为相同值
+> >
+> > > total：-Xms大小
+> > >
+> > > max：-Xmx大小
+> >
+> > 方法区：一般需要设置
+> >
+> > > jdk8之前设置永久代大小：-XX:MaxPermSize=值
+> > >
+> > > jdk7之后设置元空间打字：-XX:MaxMetaspaceSize=值
+> >
+> > 直接内存（若使用到NIO，一般需要设置）：-XX:MaxDirectMemorySize=值
 
 - java虚拟机栈内存溢出（StackOverflowError）
 
@@ -3268,7 +3289,7 @@ public class MyDao {
     - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
     - 范围：Windows（64位）下的JDK8测试最小值位180K，最大值为1024M
 
-- 堆内存溢出（OutOfMemoryError）
+- 堆内存溢出（OutOfMemoryError：Java heap space）
 
   - 堆内存默认大小
 
@@ -3287,7 +3308,7 @@ public class MyDao {
 
     > 不是，堆内存溢出的判断条件比较复杂，实际上，used接近max时就可能报出
 
-- 方法区内存溢出
+- 方法区内存溢出（OutOfMemoryError：PermGen space（jdk7）/Metaspace（jdk8））
 
   > 实际生产中，需要设置元空间最大大小
 
@@ -3295,6 +3316,87 @@ public class MyDao {
     - jdk7及之间版本：方法区存放在堆中的永久代空间，默认有上限，堆中永久代的大小可通过虚拟机参数 -XX:MaxPermSize=值  来控制
     - jdk8及之后版本：方法区存放在直接内存中，默认无上限。可以使用 -XX:MaxMetaspaceSize=值  将元空间最大大小进行限制
   - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
+  
+- 直接内存溢出（OutOfMemoryError：Direct buffer memory）
+
+  > 实际生产中，如果使用到NIO，需要设置直接内存的最大大小
+
+  - 语法：-XX:MaxDirectMemorySize=值
+  - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
+
+
+
+
+
+### 垃圾回收
+
+#### 概述
+
+- C/C++的内存管理
+
+  - C/C++中没有自动的回收机制，一个对象如果不再使用，需要手动释放，否则就会出现<font color=red>内存泄露</font>
+
+    ```c
+    #include "Test.h"
+    int main() {
+        while(true) {
+            Test* test = new Test();
+        }
+        return 0;
+    }
+    ```
+
+    ```c
+    #include "Test.h"
+    int main() {
+        while(true) {
+            Test* test = new Test();
+            delete test; // 手动回收
+        }
+        return 0l
+    }
+    ```
+
+  - 内存泄露指的是不再使用的对象所占的内存空间在系统中未被回收，内存泄露的积累可能导致内存溢出
+
+- Java的内存管理：Java中为了简化对象的释放，引入了自动的垃圾回收机制。通过垃圾回收器来对不再使用的对象完成自动的回收，<font color=red>垃圾回收机制主要负责对堆上内存的回收</font>。其他很多现代语言比如C#、Python、Go都拥有自己的垃圾回收器
+
+- 两种垃圾回收机制的对比
+
+  - Java自动垃圾回收的缺点：无法控制垃圾回收的及时性
+  - C/C++手动垃圾回收的缺点：编写不当容易出现悬空指针、重复释放、内存泄露等问题
+
+
+
+#### 线程不共享区的回收
+
+> 线程不共享的内存部分，往往是伴随着线程的创建而创建，线程的销毁而销毁。而方法的栈帧在执行完方法后就会自动弹出栈并释放掉对应的内存。
+
+
+
+#### 方法区的回收
+
+> 虚拟机参数
+>
+> > 打印类的加载日志：-XX:+TraceClassLoading
+> >
+> > 打印类的卸载日志：-XX:+TraceClassUnloading
+
+- System.gc()：向虚拟机发送一个垃圾回收的请求，具体是否以及何时进行垃圾回收由Java虚拟机自行判断
+
+- 方法区中能回收的内容主要就是不再使用的类。判定一个类可以被卸载，需要同时满足下面<font color=red>三个条件</font>
+  - 此类所有的实例对象都已被回收，在堆中不存在任何该类的实例对象以及子类对象
+  - 加载该类的类加载器已经被回收
+  - 该类对应的 java.lang.Class 对象没有在任何地方被引用
+- 由于平时使用中，大多数类一般由应用程序类加载器加载，该加载器不会被回收，所有类一般不会被卸载
+
+
+
+#### 堆的回收
+
+##### 引用计数法
+
+- Java中堆上的对象能否能被回收，会根据对象是否<font color=red>被引用</font>来决定。
 
 
 
