--- a/后端2.md
+++ b/后端2.md
@@ -3392,13 +3392,131 @@ public class MyDao {
 
 
 
-#### 堆的回收
+#### 对象回收算法
 
-##### 引用计数法
+> 判断对象能否被回收的算法
 
-- Java中堆上的对象能否能被回收，会根据对象是否<font color=red>被引用</font>来决定。
+- 引用计数法
+
+  - 对象能否能被回收，会根据对象是否<font color=red>被引用</font>来决定。
+
+  - 引用计数法会在每个对象维护一个引用计数器，当对象被引用时加1，取消引用时减1
+
+  - 说明
+    - 优点：实现简单，C++中的智能指针就采用了引用计数法
+    - 缺点：
+      - 每次引用和取消引用都需要维护计数器，对系统性能有一定的影响
+      - <font color=red>存在循环引用问题。</font>所谓循环引用，就是A对象引用了B对象，B对象右引用了A对象，此时会出现对象内存无法回收的问题
+
+- 可达性算法（Java虚拟机使用）
+
+  - 可达性算法将对象分为两类：垃圾回收的根对象（GC Root）和普通对象，GC Root对象一般不会被回收，对象与对象之间存在引用关系
+
+  - 哪些对象是GC Root对象
+
+    - 线程 Thread 对象，该对象会引用线程栈帧中的方法参数、局部变量等
+
+      ```java
+      public void method() {
+          A a = new A();
+          B b = new B();
+          a.b = b;
+          b.a = a;
+          a = null;
+          b = null;
+      }
+      ```
+
+    - 系统类加载器加载的 java.lang.Class 对象
+
+      ```java
+      // sun.misc.Launcher 是GC Root对象，该对象可以找到 AppClassLoader
+      // 该类由 AppClassLoader 加载，静态引用变量的内存地址存储在Class对象中
+      public class MyClass {
+          // 静态变量不会被回收
+          private static A a = new A();
+      }
+      ```
+
+    - 监视器对象（Monitor），用来保存同步锁 synchronized 关键字持有的对象
+
+    - 本地方法调用时使用的全局对象
 
 
+
+#### 五种对象引用
+
+- 强引用
+
+- 软引用：软引用相对于强引用是一种比较弱的引用关系，如果一个对象只有软引用关联到它，<font color=red>当程序内存不足时，就会将软引用中的数据进行回收</font>，在JDK1.2版本后提供了SoftReference类来实现软引用，软引用常用于缓存中
+
+  ```java
+  // 添加虚拟机参数 -Xms200m -Xmx200m
+  
+  byte[] bytes = new byte[100*1024*1024];
+  // GC Root强引用软引用对象，软引用对象软引用其内部数据
+  SoftReference<byte[]> softReference = new SoftReference<>(bytes);
+  bytes = null; // 去掉强引用
+  System.out.println(softReference.get()); // 内存足够，不会被回收
+  
+  byte[] bytes2 = new byte[100*1024*1024];
+  System.out.println(softReference.get()); // 内存不足，执行一次垃圾回收，仍不足，回收软引用
+  
+  byte[] bytes2 = new byte[100*1024*1024]; // OutOfMemoryError: Java heap space
+  ```
+
+  - 问题：软引用这个”盒子“里的数据被回收，但”盒子“却是强引用，不会被回收
+
+    ```java
+    // 添加虚拟机参数 -Xms200m -Xmx200m
+    
+    ReferenceQueue<byte[]> queues = new ReferenceQueue<>();
+    List<SoftReference<byte[]>> list = new ArrayList<>();
+    
+    byte[] bytes = new byte[100*1024*1024];
+    // 参数传入ReferenceQueue对象，每次盒子内容被回收，对应盒子就会被放入该Queue
+    list.add(new SoftReference<>(bytes, queues));
+    bytes = null;
+    
+    byte[] bytes2 = new byte[100*1024*1024];
+    list.add(new SoftReference<>(bytes2, queues));
+    bytes2 = null;
+    
+    int count = 0;
+    while (list.remove((SoftReference<byte[]>) queues.poll())) {
+        count++;
+    }
+    System.out.printf("本次回收盒子 %s 个\n", count);
+    ```
+
+  - 设计一个Student的缓存类
+
+    ![盒子模型](D:\picture\typora\后端2\Student缓存类设计.png)
+
+- 弱引用：弱引用的机制和软引用类似，区别在于弱引用包含的对象在垃圾回收时，不管内存是否够用，都会被直接回收。在JDK1.2版之后提供了WeakReference类来实现弱引用，弱引用主要在ThreadLocal中使用。弱引用对象本身也可以用引用队列进行回收
+
+- 虚引用：不能通过虚引用对象（盒子）获得内部包含的对象（盒子里的内容）。唯一用途是当对象被垃圾回收器回收时可以利用其获得通知。Java中使用PhantomReference实现了虚引用，直接内存中为了及时知道直接内存对象不再使用，从而回收内存，使用了虚引用来实现
+
+  ```java
+  ByteBuffer directBuffer = ByteBuffer.allocateDirect(size);
+  directBuffer = null;
+  
+  // 当 directBuffer直接内存中的对象被回收时，需要及时通知JVM释放直接内存还给操作系统
+  ```
+
+- 终结器引用：（一般不会使用）指的是在对象需要被回收时，对象将被放置在Finalizer类中的引用队列中，在稍后由一条FinalizerThread线程从列表中获取对象，然后执行对象的finalize方法，在对象第二次被回收时，该对象才真正的被回收。在这个过程可以在finalize方法中再将自己对象使用强引用关联上，但不建议这样做
+
+  
+
+
+
+#### 垃圾回收算法
+
+> 1960年John McCarthy发布了第一个GC算法：标记-清除算法
+>
+> 1963年Marvin L. Minsky发布了复制算法
+>
+> 本质上后续的所有垃圾回收算法，都是在上述两种算法的基础上优化而来的。
 
 
 
