Oct 23th 2023 First Commit

--- a/后端2.md
+++ b/后端2.md
@@ -3146,11 +3146,13 @@ public class MyDao {
     - 静态变量也可以存放堆上对象的引用，通过静态变量就可以实现对象在线程之间的共享
     - java虚拟机<font color=red>还会在类的加载阶段在堆中生成一份与方法区中数据类似的 java.lang.Class 对象</font>，作用是在 java代码中去获取类的信息以及存储静态字段的数据（如反射）（jdk8及之后静态字段数据存放在堆中的类信息中）
 
-  - 三部分
+  - 使用上可分为三部分
 
     - used：指的是当前已使用的堆内存
     - total：java虚拟机已经分配的可用堆内存
     - max：java虚拟机可以分配的最大堆内存
+
+  - [作用上可分为：新生代、老年代](#分代GC算法)
 
   - 测试代码（可用 arthas 的 memory 命令检测）
 
@@ -3260,7 +3262,7 @@ public class MyDao {
 
 #### 内存溢出
 
-> 参数设置
+> <font color=red>参数设置</font>
 >
 > > 栈：-Xss栈大小
 > >
@@ -3512,13 +3514,199 @@ public class MyDao {
 
 #### 垃圾回收算法
 
+> 虚拟机参数：-verbose:gc （打印出垃圾回收的日志）
+
 > 1960年John McCarthy发布了第一个GC算法：标记-清除算法
 >
 > 1963年Marvin L. Minsky发布了复制算法
 >
 > 本质上后续的所有垃圾回收算法，都是在上述两种算法的基础上优化而来的。
 
+- 分类
 
+  - 标记-清除算法（Mark Sweep GC）
+
+  - 复制算法（Copying GC）
+
+  - 标记-整理算法（Mark Compact GC）
+
+  - [分代GC（Generational GC）](#分代GC算法)
+
+- STW（Stop The World）：Java垃圾回收过程会通过单独的GC线程来完成，但是不管使用哪一种GC算法，都会有部分阶段需要停止所有的用户线程。这个过程被称之为 Stop The World 。如果STW时间过长，则会影响用户的使用过程
+
+- 垃圾回收算法的评价标准
+
+  - 吞吐量：指的是CPU用于执行用户代码的时间与CPU总执行时间的比值（即吞吐量=执行用户代码时间/（执行用户代码时间 + GC时间）。吞吐量数值越高，垃圾回收的效率就越高。
+  - 最大暂停时间：STW时间的最大值
+  - 堆使用的效率：不同的垃圾回收算法，对堆内存的使用方式是不同的。比如标记清除法，可以使用完整的堆内存。而复制算法会将堆内存一分为二，每次只能使用一半内存。
+
+  > 总结：三者不可兼得，<font color=red>不同的垃圾回收算法，适用于不同的场景。</font>
+
+- 标记-清除算法
+
+  - 核心思想是分为两个阶段
+    - 标记阶段：将所有存活的对象进行标记。Java中使用可达性算法，从GC Root开始通过引用链遍历出所有存活的对象。
+    - 清除阶段：从内存中释放没有被标记（非存活）的对象。
+  - 优点：实现简单，只需要在第一阶段为每个对象维护一个标志位，第二阶段根据标志位进行清除即可
+  - 缺点：
+    - 碎片化：由于内存的分配很多情况是需要一块连续的区域，在对象被删除之后，内存中会出现很多细小的可用的内存单元，该单元组合起来可以放下一个较大的内存对象，但它们是分散的，可能没有容纳该对象的连续的内存空间
+    - 分配速度慢：由于内存碎片的存在，需要维护一个空闲的链表，极有可能发生每次需要遍历到链表的最后才能获得合适的内存空间
+
+- 复制算法
+
+  - 核心思想：
+    - 准备两块空间 From空间和 To空间，每次在对象分配阶段，只能使用其中一块空间。
+    - 在垃圾回收阶段，将 From空间中存活的对象复制到 To空间，现From空间中的对象可以释放
+    - 将两块空间的名字互换
+  - 优点：
+    - 吞吐量高：只需要遍历一次存活对象复制到 To空间，虽然比标记清除算法少一次遍历，但因为需要对对象进行内存空间的移动，性能逊色于标记清除算法
+    - 不会产生碎片化
+  - 缺点：内存使用效率低
+
+- 标记-整理算法
+
+  - 核心思想分为两个阶段
+    - 标记阶段：将所有存活的对象进行标记。Java中使用可达性分析算法，从GC Root开始通过引用链遍历出所有存活的对象。
+    - 整理算法：将存活对象移动到堆的一端。释放掉不再使用的对象的空间。
+  - 优点：
+    - 内存使用率高
+    - 不会产生碎片化
+  - 缺点：整理阶段的效率不高（整理算法有很多，如Lisp2、Two-Finger、表格算法、ImmixGC等算法等算法）
+
+- <font color=red id="分代GC算法">分代GC算法</font>
+
+  > 现代优秀的垃圾回收算法，会将上述的垃圾回收算法组合进行使用，其中应用最广的就是分代垃圾回收算法。
+
+  - 将内存分为多个区域
+    - 年轻代（Young）：存放存活时间比较短的对象
+      - 伊甸园（Eden）
+      - 幸存者区（Survivor）：复制算法
+        - 幸存区0（S0、From/To）
+        - 幸存区1（S1、To/From）
+    - 老年代（Old）：存放存活时间比较长的对象
+  
+  - 虚拟机参数设置（使用SerialGC：-XX:+UseSerialGC）
+  
+    | 参数名                             | 参数含义                                                     |
+    | ---------------------------------- | ------------------------------------------------------------ |
+    | -Xmn值                             | 新生代大小                                                   |
+    | -XX:SurvivorRatio=比值             | 伊甸园和每块幸存区的比例，默认8（8:1）<br/>若比值为3，年轻代20m，则伊甸区12m，幸存区0、1各4m |
+    | -XX:+PrintGCDetails<br/>verbose:gc | 打印GC日志                                                   |
+  
+    - 内存的设置，其生效结果可能因 jdk版本 与 垃圾回收器 的不同而不同，此处使用jdk8、SerialGC
+  
+  - 核心思想
+  
+    - 分代回收时，创建出来的对象，首先会被放在Eden伊甸园
+    - 如果Eden满了，新创建的对象无法放入，就会触发<font color=red>年轻代的GC</font>，称为Minor GC 或 Young GC
+    - Minor GC 会把 Eden和From区 中需要回收的对象回收，把没有回收的对象放入 To区，随后将 From区和 To区名字互换
+    - 每次 Minor GC中都会为对象记录年龄，初始值为0，每次GC完加1，当年龄达到阈值（具体值和垃圾回收器有关。最大15，因为对象标记mark word用了4bit记录年龄，最大值1111即15），对象就会被移到老年代
+    - 如果整个年轻代满了，Minor GC后仍无法清出足够的空间存放新的对象，一些未到阈值年龄的对象也会被放入老年代
+  
+    - 当老年代空间不足时，无法放入新对象是，会先尝试minor GC，如果还是不足，就会触发Full GC，Full GC会对整个堆进行垃圾回收
+
+
+
+#### 垃圾回收器
+
+- 为什么分代GC算法要将堆分为新生代和老年代
+
+  - 可以通过调整年轻代和老年代的比例来适应不同类型的应用程序，提高内存的利用率和性能
+    - 在大多数应用中，老年代的大小都是远大于新生代的
+    - 但在如购物节背景下的购物应用，订单对象可能快速增加，但该对象生命周期短，此时可以增大新生代，防止一些对象未到阈值年龄进入老年代而无法被及时回收
+  - 新生代与老年代可以使用不同的垃圾回收算法，新生代一般使用复制算法，老年代可以选择标记-清除和标记-整理算法，灵活度较高
+  - 新生代、老年代划分合理时，大多数情况下只会堆新生代进行GC（Minor GC），STW时间短。
+
+- 分类与组合关系
+
+  - <font color=red>指定垃圾回收器</font>
+
+    > -XX:+PrintFlagsFinal：运行时，输出JVM所有参数
+
+    - -XX:+UseSerialGC（年轻代、老年代都使用串行回收器）
+    - -XX:+UseParNewGC（年轻代使用ParNew，老年代使用串行）
+    - -XX:+UseParNewGC -XX:+UseConcMarkSweepGC（年轻代使用ParNew，老年代使用CMS）
+      - -XX:CMSFullGCsBeforeCompaction=N（默认0），调整在N次FullGC之后整理碎片。
+
+    - -XX:+UseParallelGC 或 -XX:+UseParallelOldGC（jdk8默认，使用 PS+PO 组合）
+      - -XX:MaxGCPauseMillis=n：设置每次垃圾回收的最大停顿毫秒数
+      - -XX:GCTimeRatio=n：设置吞吐量为n（用户线程执行时间=n/n +1）
+      - -XX:+UseAdaptiveSizePolicy：（默认开启）设置让垃圾回收根据吞吐量和最大停顿的毫秒数自动调整内存大小
+
+  - 垃圾回收器是垃圾回收算法的具体实现
+
+  - 除G1之外，垃圾回收器分为年轻代和老年代。因此，除G1外，其他垃圾回收器需要成对组合使用。组合关系如下
+
+    ![盒子模型](D:\picture\typora\后端2\垃圾回收器组合关系.png)
+
+- 详细介绍
+
+  - 年轻代-Serial：是一种<font color=red>单线程串行</font>回收年轻代的垃圾回收器
+    - 步骤：Eden满后，会停止用户线程，使用单线程进行垃圾回收，在继续用户线程
+    - 算法：复制算法
+    - 优点：单CPU处理器下吞吐量优秀
+    - 缺点：多CPU下吞吐量不如其他垃圾回收器，堆如果偏大会让用户线程长时间等待
+    - 适用场景：Java编写的客户端程序或者硬件配置有限的场景
+
+  - 老年代-SerialOld：是一种<font color=red>单线程串行</font>回收老年代的垃圾回收器
+    - 算法：标记-整理算法
+    - 优缺点、适用场景与年轻代-Serial 垃圾回收器相似
+
+
+  - 年轻代-ParNew：本质是对Serial在多CPU下的优化，使用<font color=red>多线程</font>进行垃圾回收
+    - 步骤：Eden满后，会停止用户线程，使用多线程进行垃圾回收，在继续用户线程
+    - 算法：复制算法
+    - 优点：多CPU处理器下停顿时间短
+    - 缺点：吞吐量和停顿时间不入G1，所以在JDK9之后不建议使用
+    - 适用场景：JDK8及之前版本中，与CMS老年代垃圾回收器搭配使用
+  - 老年代-CMS：<font color=red>关注的是系统的暂停时间</font>，允许用户线程和垃圾回收线程在某些步骤中同时执行
+    - 步骤：
+      - 初始标记：先停止用户线程；在单线程下，用极短的时间标记出GC Roots直接关联的对象
+      - 并发标记：与用户线程并发调用，标记出对象是否需要回收
+      - 重新标记：先停止用户线程；由于并发标记阶段有些对象发生了变化，在多线程下，用极短时间纠正错标、漏标情况。
+      - 并发清理：与用户线程并发调用，进行垃圾回收
+    - 算法：标记-清除算法
+    - 优点：系统由于垃圾回收出现的停顿时间较短，用户体验好
+    - 缺点
+      - 内存碎片：使用并发-清除算法，在垃圾收集结束后会存在大量的内存碎片，CMS会在Full GC时进行碎片整理，这是会导致用户线程暂停，可以使用-XX：CMSFullGCsBeforeCompaction=N（默认0），调整在N次FullGC之后整理碎片。
+      - 浮动垃圾问题：无法清理在并发清理过程中产生的“浮动垃圾”，该“垃圾”只能等到下一次垃圾回收时清除，不能做到完全的垃圾回收
+      - 退化：当内存不足无法分配对象时，CMS就会退化成SerialOld单线程回收老年代
+    - 适用场景：大型互联网系统中，用户请求数据量大、频率高的场景。如订单接口、商品接口等
+
+  - 年轻代-Parallel Scavenge：是jdk8默认的年轻代垃圾回收器，多线程并行回收，<font color=red>关注的是系统的吞吐量</font>。具备<font color=red>自动调整堆内存大小</font>的特点。
+
+    - 算法：复制算法
+
+    - 优点：吞吐量高，而且手动可控。为了提高吞吐量，虚拟机会动态调整堆的参数。
+
+      - -XX:MaxGCPauseMillis=n：设置每次垃圾回收的最大停顿毫秒数
+      - -XX:GCTimeRatio=n：默认99，设置吞吐量为n（用户线程执行时间=n/(n+1)）
+
+      > 上面两个参数的设定值应根据多次测试得出。
+      >
+      > <font color=red>提高吞吐量，可能会让JVM减小年轻代的可用空间</font>
+
+      - -XX:+UseAdaptiveSizePolicy：默认开启，设置让垃圾回收根据吞吐量和最大停顿的毫秒数自动调整内存大小
+
+    - 缺点：不能保证单次的停顿时间
+
+    - 适用场景：后台任务，不需要与用户交互（不用着重关注用户体验），并且容易产生大量的对象。如：大数据的处理，大文件的导出
+
+  - 老年代-Parallel Old：与 PS 组合，利用多线程进行垃圾回收
+
+    - 算法：标记-整理算法
+    - 优点：并发收集，在多核CPU下效率最高
+    - 缺点：不能保证单次的停顿时间
+    - 适用场景：与PS组合使用
+
+  - G1：JDK9后默认使用的垃圾回收器
+
+    - 优点
+      - 支持巨大的堆空间回收，并有较高的吞吐量
+      - 支持多CPU并行垃圾回收
+      - 允许用户设置最大暂停时间
+
+  
 
 
 
