Oct 24th 2023 First Commit

--- a/后端2.md
+++ b/后端2.md
@@ -2456,6 +2456,8 @@ public class MyDao {
 
 > The Java Virtual Machine
 
+> 虚拟机参数：-XX:+PrintFlagsFinal（执行前，打印所有虚拟机参数及状态）
+
 ## 基础
 
 ### 字节码文件
@@ -3448,7 +3450,7 @@ public class MyDao {
 
 #### 五种对象引用
 
-- 强引用
+- 强引用：最常见的引用，由可达性分析算法来判断
 
 - 软引用：软引用相对于强引用是一种比较弱的引用关系，如果一个对象只有软引用关联到它，<font color=red>当程序内存不足时，就会将软引用中的数据进行回收</font>，在JDK1.2版本后提供了SoftReference类来实现软引用，软引用常用于缓存中
 
@@ -3651,60 +3653,164 @@ public class MyDao {
   - 老年代-SerialOld：是一种<font color=red>单线程串行</font>回收老年代的垃圾回收器
     - 算法：标记-整理算法
     - 优缺点、适用场景与年轻代-Serial 垃圾回收器相似
+  
+  
+    - 年轻代-ParNew：本质是对Serial在多CPU下的优化，使用<font color=red>多线程</font>进行垃圾回收
+      - 步骤：Eden满后，会停止用户线程，使用多线程进行垃圾回收，在继续用户线程
+      - 算法：复制算法
+      - 优点：多CPU处理器下停顿时间短
+      - 缺点：吞吐量和停顿时间不入G1，所以在JDK9之后不建议使用
+      - 适用场景：JDK8及之前版本中，与CMS老年代垃圾回收器搭配使用
+  
+  
+    - 老年代-CMS：<font color=red>关注的是系统的暂停时间</font>，允许用户线程和垃圾回收线程在某些步骤中同时执行
+      - 步骤：
+        - 初始标记：先暂停用户线程；在单线程下，用极短的时间标记出GC Roots直接关联的对象
+        - 并发标记：与用户线程并发调用，标记出GCRoots间接关联的对象
+        - 重新标记：先暂停用户线程；由于并发标记阶段有些对象发生了变化，在多线程下，用极短时间纠正错标、漏标情况。
+        - 并发清理：与用户线程并发调用，进行垃圾回收
+      - 算法：标记-清除算法
+      - 优点：系统由于垃圾回收出现的停顿时间较短，用户体验好
+      - 缺点
+        - 内存碎片：使用并发-清除算法，在垃圾收集结束后会存在大量的内存碎片，CMS会在Full GC时进行碎片整理，这是会导致用户线程暂停，可以使用-XX：CMSFullGCsBeforeCompaction=N（默认0），调整在N次FullGC之后整理碎片。
+        - 浮动垃圾问题：无法清理在并发清理过程中产生的“浮动垃圾”，该“垃圾”只能等到下一次垃圾回收时清除，不能做到完全的垃圾回收
+        - 退化：当内存不足无法分配对象时，CMS就会退化成SerialOld单线程回收老年代
+      - 适用场景：大型互联网系统中，用户请求数据量大、频率高的场景。如订单接口、商品接口等
+  
+  
+    - 年轻代-Parallel Scavenge：是jdk8默认的年轻代垃圾回收器，多线程并行回收，<font color=red>关注的是系统的吞吐量</font>。具备<font color=red>自动调整堆内存大小</font>的特点。
+  
+      - 算法：复制算法
+  
+      - 优点：吞吐量高，而且手动可控。为了提高吞吐量，虚拟机会动态调整堆的参数。
+  
+        - -XX:MaxGCPauseMillis=n：设置每次垃圾回收的最大停顿毫秒数
+        - -XX:GCTimeRatio=n：默认99，设置吞吐量为n（用户线程执行时间=n/(n+1)）
+  
+        > 上面两个参数的设定值应根据多次测试得出。
+        >
+        > <font color=red>提高吞吐量，可能会让JVM减小年轻代的可用空间</font>
+  
+        - -XX:+UseAdaptiveSizePolicy：默认开启，设置让垃圾回收根据吞吐量和最大停顿的毫秒数自动调整内存大小
+  
+      - 缺点：不能保证单次的停顿时间
+  
+      - 适用场景：后台任务，不需要与用户交互（不用着重关注用户体验），并且容易产生大量的对象。如：大数据的处理，大文件的导出
+  
+  
+    - 老年代-Parallel Old：与 PS 组合，利用多线程进行垃圾回收
+  
+      - 算法：标记-整理算法
+      - 优点：并发收集，在多核CPU下效率最高
+      - 缺点：不能保证单次的停顿时间
+      - 适用场景：与PS组合使用
+  
+  
+    - [G1](#G1)：JDK9及之后默认使用的垃圾回收器
+  
 
 
-  - 年轻代-ParNew：本质是对Serial在多CPU下的优化，使用<font color=red>多线程</font>进行垃圾回收
-    - 步骤：Eden满后，会停止用户线程，使用多线程进行垃圾回收，在继续用户线程
-    - 算法：复制算法
-    - 优点：多CPU处理器下停顿时间短
-    - 缺点：吞吐量和停顿时间不入G1，所以在JDK9之后不建议使用
-    - 适用场景：JDK8及之前版本中，与CMS老年代垃圾回收器搭配使用
-  - 老年代-CMS：<font color=red>关注的是系统的暂停时间</font>，允许用户线程和垃圾回收线程在某些步骤中同时执行
-    - 步骤：
-      - 初始标记：先停止用户线程；在单线程下，用极短的时间标记出GC Roots直接关联的对象
-      - 并发标记：与用户线程并发调用，标记出对象是否需要回收
-      - 重新标记：先停止用户线程；由于并发标记阶段有些对象发生了变化，在多线程下，用极短时间纠正错标、漏标情况。
-      - 并发清理：与用户线程并发调用，进行垃圾回收
-    - 算法：标记-清除算法
-    - 优点：系统由于垃圾回收出现的停顿时间较短，用户体验好
-    - 缺点
-      - 内存碎片：使用并发-清除算法，在垃圾收集结束后会存在大量的内存碎片，CMS会在Full GC时进行碎片整理，这是会导致用户线程暂停，可以使用-XX：CMSFullGCsBeforeCompaction=N（默认0），调整在N次FullGC之后整理碎片。
-      - 浮动垃圾问题：无法清理在并发清理过程中产生的“浮动垃圾”，该“垃圾”只能等到下一次垃圾回收时清除，不能做到完全的垃圾回收
-      - 退化：当内存不足无法分配对象时，CMS就会退化成SerialOld单线程回收老年代
-    - 适用场景：大型互联网系统中，用户请求数据量大、频率高的场景。如订单接口、商品接口等
+  - 垃圾回收器的选择
 
-  - 年轻代-Parallel Scavenge：是jdk8默认的年轻代垃圾回收器，多线程并行回收，<font color=red>关注的是系统的吞吐量</font>。具备<font color=red>自动调整堆内存大小</font>的特点。
+    - JDK8及之前
 
-    - 算法：复制算法
+        - ParNew + CMS：关注暂停时间
+        - Parallel Scavenge + Parallel Old：关注吞吐量
+        - G1：JDK8之前不建议，较大堆并且关注暂停时间
 
-    - 优点：吞吐量高，而且手动可控。为了提高吞吐量，虚拟机会动态调整堆的参数。
+    - JDK9及之后：G1（默认）
 
-      - -XX:MaxGCPauseMillis=n：设置每次垃圾回收的最大停顿毫秒数
-      - -XX:GCTimeRatio=n：默认99，设置吞吐量为n（用户线程执行时间=n/(n+1)）
 
-      > 上面两个参数的设定值应根据多次测试得出。
+
+
+#### <span id="G1">G1</span>
+
+> JDK9及之后后默认使用的垃圾回收器
+>
+> -XX:+UseG1GC（打开G1开关，jdk9之前使用）
+
+- 回收年代及算法：年轻代+老年代、复制算法
+
+- 优点
+  - 支持巨大的堆空间回收（如超过6G），并有较高的吞吐量
+  - 不会产生内存碎片
+  - 支持多CPU并行垃圾回收，并发标记长SATB算法效率高
+  - 允许用户设置最大暂停时间
+  
+- 核心思想
+
+  <table style="table-layout: fixed" border="1px" cellspacing="0">
+      <tr>
+          <td></td>
+          <td style="background-color:#b7da88;">Eden</td>
+          <td></td>
+          <td style="background-color:#b7da88;">Eden</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td style="background-color:rgba(32,178,178,0.96);">Old</td>
+      </tr>
+      <tr>
+          <td></td>
+          <td style="background-color:#ffd04c;" colspan="2">Humongous</td>
+          <td style="background-color:#81eaea;">Survivor</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td style="background-color:rgba(32,178,178,0.96);">Old</td>
+      </tr>
+
+  - G1的整个堆会被划分为多个大小相等的区域，称之为Region，区域不要求是连续的。分为多个 Eden、Survivor、Old区。Region的大小默认可通过 堆空间大小/2048 计算得到，也可以通过参数 -XX:G1HeapRegionSize=值（值必须是2的指数幂，取值范围为1M到32M）指定
+  - 部分对象如果大小超过了Region的一半，会直接放到老年代，这类老年代被称为Humongous区。如果超过了Region，则会横跨多个Region
+  - G1垃圾回收的两种方式
+    - 年轻代回收（Young GC）
+    - 混合回收（Mixed GC）
+
+- 年轻代回收（Young GC）
+
+  - 回收Eden和Survivor区中不用的对象。
+
+  - 会导致STW，G1中可以通过参数 -XX:MaxGCPauseMillis=值（默认200）设置每次垃圾回收时的最大暂停时间，G1会尽可能的保证暂停时间
+
+  - 执行流程
+
+    - 新创建的对象会被放在Eden区。当G1判断年轻代不足（默认在年轻代占总堆空间的60%时），无法分配对象需要回收时会触发 YoungGC
+
+    - 标记出Eden和Survivor区域中存活的对象
+
+    - 根据最大配置的暂停时间选择某些区域，将这些区域中存活的对象复制到一个新的Survivor区中（对象年龄+1），然后清空这些区域
+
+      > G1在进行YoungGC的过程中会去记录每次垃圾回收时每一个回收区域的平均回收耗时，作为下次回收的参考依据。这样就可以根据配置的最大暂停时间，计算出本次回收时最多能回收多少个Region区域。
       >
-      > <font color=red>提高吞吐量，可能会让JVM减小年轻代的可用空间</font>
+      > 比如 -XX:MaxGCPauseMillis=200，每个Region回收耗时40ms，那么这次回收最多只能回收4个区域（回收5个可能会超时）
 
-      - -XX:+UseAdaptiveSizePolicy：默认开启，设置让垃圾回收根据吞吐量和最大停顿的毫秒数自动调整内存大小
+    - 后续的YoungGC与之前相同，只不过Survivor区中存活的对象会被搬运到另一个Survivor区中
 
-    - 缺点：不能保证单次的停顿时间
+    - 当某个存活对象的年龄达到阈值（默认15），将会被放入老年代
 
-    - 适用场景：后台任务，不需要与用户交互（不用着重关注用户体验），并且容易产生大量的对象。如：大数据的处理，大文件的导出
+    - 多次回收之后，会出现很多Old老年代，此时总堆占有率达到阈值时（可通过 -XX:InitiatingHeapOccupancyPercent=45 默认即45%）会触发混合回收。回收所有年轻代和部分老年代的对象以及大对象区。采用复制算法来完成。
 
-  - 老年代-Parallel Old：与 PS 组合，利用多线程进行垃圾回收
+- 混合回收（Mixed GC）
 
-    - 算法：标记-整理算法
-    - 优点：并发收集，在多核CPU下效率最高
-    - 缺点：不能保证单次的停顿时间
-    - 适用场景：与PS组合使用
-
-  - G1：JDK9后默认使用的垃圾回收器
-
-    - 优点
-      - 支持巨大的堆空间回收，并有较高的吞吐量
-      - 支持多CPU并行垃圾回收
-      - 允许用户设置最大暂停时间
+  - 执行流程
+    - 初始标记：先暂停用户线程；再多线程并发将GCRoots直接关联的对象标记为存活
+    - 并发标记：与用户线程并发执行，将与GCRoots间接关联的对象也标记为存活
+    - 最终标记：先暂停用户线程；由于并发标记阶段有些对象发生了变化，在多线程下，标记一些引用改变漏标的对象，不管新创建、不再关联的对象
+    - 并发清理：与用户线程并发执行，将存活的对象复制到别的Region，不会产生内存碎片
+  - G1对老年代的清理会优先选择存活度最低的区域来回收，这样可以保证回收效率最高，这也就是G1（Garbage First）名字的由来
+  - 如果清理过程中发现没有足够的空Region来存放转移的对象，会触发FullGC（单线程执行标记-整理算法），此时可能会导致用户线程长时间暂停
 
   
 
