Jan. 2nd 2024 First commit

--- a/后端.md
+++ b/后端.md
@@ -64,6 +64,7 @@
   - reboot（立即重启）
 
   - sync（把内存的数据同步到磁盘）
+  
 - 用户管理
 
   - 用户注销：
@@ -89,13 +90,23 @@
     - /etc/passwd：用户的配置文件，记录了用户的各种信息
     - /etc/shadow：口令的配置文件
     - /etc/group：组的配置文件，记录Linux包含的组的信息
+  
 - 环境变量
   - vim /etc/profile
+  
   - 文件末尾添加
-    - `export JAVA_HOME=/usr/local/java/jdk1.8.0_333`
-    - `export PATH=$JAVA_HOME/bin:$PATH`
-    - `source /ect/profile` （刷新环境变量）
-    - `echo $PATH`（查看环境变量
+  
+    ```ini
+    export JAVA_HOME=/usr/local/java/jdk1.8.0_333
+    export PATH=$JAVA_HOME/bin:$PATH
+    ```
+  
+    ```shell
+    # 刷新环境变量
+    source /ect/profile
+    # 查看环境变量
+    echo $PATH
+    ```
 
 
 
@@ -128,8 +139,10 @@
   - cat 文件1 > 文件2：将文件1的内容覆盖到文件2中
   - echo "内容" >> 文件：追加内容到指定文件
 
-- ln指令
-  - 基本语法：ln -s 源文件或目录 软连接名
+- ln指令：创建一个软（或硬）链接
+  - 基本语法：ln [-s] 源文件或目录 软连接名
+  - 携带参数 -s：创建软链接（快捷方式）
+  - 不携带参数 -s：创建硬链接（复制并让内容保持同步）
 - history指令
   - history	：看最近执行的全部命令
   - history 条数：看最近的指定条数
@@ -183,7 +196,7 @@
 ### 快速入门
 
 ```java
-public ThreadPoolExecuto(int corePollSize, // 核心线程数
+public ThreadPoolExecutor(int corePollSize, // 核心线程数
                         int maximumPoolSize, // 最大线程数
                         long keepAliveTime, // 最大空闲时间
                         TimeUnit unit, // 时间单位
@@ -205,6 +218,28 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
   - \<T> Future\<T> submit(Callable\<T> task)：执行带返回值的任务，返回一个表示该任务的Future对象
   - Future\<?> submit(Runable task)：执行Runable任务，并返回一个表示该任务的Future
   - \<T> Future\<T> submit(Runnable task, T result)：执行Runnable任务，并返回一个表示该任务的Future对象
+  
+- Future
+
+  ```java
+  public interface Future<V> {
+      // true：取消正在等待执行、正在执行的任务，无法取消已经完成的任务
+      // false：取消正在等待执行的任务，无法取消正在执行、已经完成的任务
+      boolean cancel(boolean mayInterruptIfRunning);
+      // 判断任务是否被取消
+      boolean isCancelled();
+      // 判断任务是否完成
+      boolean isDone();
+      // 阻塞等待获得任务结果
+      V get() throws InterruptedException, ExecutionException;
+      // 阻塞等待一定时间，获得任务结果
+      V get(long timeout, TimeUnit unit)
+          throws InterruptedException, ExecutionException, TimeoutException;
+  }
+  ```
+
+  
+
 - 获得对象
   - 介绍
     - ExecutorService是一个接口
@@ -222,6 +257,8 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
 
 
 ## jdk新特性
+
+> 语法上的新特性
 
 ### jdk8
 
@@ -285,15 +322,13 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
     
     public List<String> filterString(List<String> list, Predicate<String> predicate) {
         ArrayList<String> filterList = new ArrayList<>();
-        for (String s : list) {
-            if (predicate.test(s)) {
-                filterList.add(s);
-            }
-        }
+        list.forEach(str -> {
+            if (predicate.test(str)) filterList.add(str);
+        });
         return filterList;
     }
     ```
-
+  
 - 其他接口
 
   - | 函数式接口                                                   | 参数类型              | 返回类型              | 方法                   |
@@ -316,6 +351,7 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
   - 本质就是lambda表达式，而lambda表达式作为函数式接口的实例。所以方法引用也是函数式接口的实例
 
   - 使用格式： 类（或对象）**::** 方法名
+
   - 使用要求
     - 要求函数式接口中的方法的形参列表和返回值类型与方法引用的方法的形参列表和返回值类型相同
 
@@ -338,10 +374,6 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
         BiPredicate<String, String> biPredicate3 = String::equals;
         System.out.println(biPredicate3.test("abc", "abc"));
         ```
-
-      - 若String类中含有 static boolean equals(String str1, String str2) 和 boolean equals(String str) 这两个方法，则上面使用 String::equals 时报错
-
-        - 实际上，当形参列表第一个参数有方法引用的方法的同名方法时，会找非静态方法而不会找静态方法，若没有该名字得非静态方法 或 两种方法都有，则报错
 
 - 构造器引用
 
@@ -384,84 +416,85 @@ public ThreadPoolExecuto(int corePollSize, // 核心线程数
       - ```java
         List<String> list = Arrays.asList("北京", "南京", "天津", "东京");
         Stream<String> stream = list.stream();
+        // parallelStream其实就是一个并行执行的流.它通过默认的ForkJoinPool,可能提高你的多线程任务的速度
         Stream<String> parallelStream = list.parallelStream();
         ```
-
+  
     - 通过数组获取
-
+  
       - ```java
         String[] arr = {"北京", "南京", "天津", "东京"};
         Stream<String> stream = Arrays.stream(arr);
         ```
-
+  
     - 通过Stream的of方法
-
+  
       - ```java
         Stream<String> areas = Stream.of("北京", "南京", "天津", "东京");
         ```
-
+  
     - 创建无限流
-
+  
       - ```java
         // Stream.iterate(T seed, UnaryOperator<T> f)
         Stream.iterate("23", t -> t + "3");
         // Stream.generate(Supplier<? extends T>)
         Stream.generate(() -> "Hello,world")
         ```
-
+  
   - 中间操作
-
+  
     - 筛选与切片
-
+  
       - 过滤：filter(Predicate p)
       - 截断：limit(int maxSize)
       - 跳过：skip(long n)
       - 筛选：distinct()（通过hashCode()和equals()方法去重）
-
+  
     - 映射
-
+  
       - map(Function f)
-
+  
         - 接收一个转化规则函数作为参数，将Stream中的元素按规则转成其他形式
-
+  
         - ```java
           Customer customer = new Customer(1, "张三", 28, true);
           List<Customer> list = Arrays.asList(customer);
           list.stream().map(Customer::getName).filter((str) -> str.length()<3).forEach(System.out::println);
           ```
-
+  
       - flatMap(Function f)
-
+  
         - 接收一个转化规则作为参数，将Stream中的元素按规则转成Stream，最终形成Stream套Stream
-
+  
     - 排序
-
+  
       - 自然排序：sorted()
         - 按 Stream中元素实现Comparable\<T>接口后重写的compareTo方法 进行排序
       - 规则排序：sorted(Comparator com)
-
+  
   - 终止操作
-
+  
     - 匹配与查找
-
+  
       - allMatch(Predicate p)：检查所有元素是否匹配
       - anyMatch(Predicate p)：检查是否有元素匹配
       - noneMatch(Predicate p)：检查是否没有匹配的元素
       - findFirst()：返回第一个元素
       - findAny()：返回当前流中的任意元素
-
+  
       - count()：返回流中元素总数
       - max(Comparator c)：返回流中的最大值
       - min(Comparator c)：返回流中的最小值
       - forEach(Consumer c)：内部迭代
-
+  
     - 规约
-
-      - reduce(T identity, BinaryOpeator b)：可以将流中的元素反复结合起来，得到一个值
+  
+      - reduce(T identity, BinaryOperator b)：可以将流中的元素反复结合起来，得到一个值
       - reduce(BinaryOperator b)
-
+  
     - 收集
-
+  
       - collect(Collector c)
         - Collectors的toList，toMap和toCollection方法可以获得一个Collector对象
 
@@ -750,7 +783,7 @@ public sealed class Animal permits Dog, Cat {
 // 子类必须被 final 或 non-sealed 修饰
 // 子类和父类必须同包
 public final class Cat {}
-public no class Dog {}
+public non-sealed class Dog {}
 ```
 
 
@@ -768,8 +801,8 @@ public class RecordTest {
 }
 
 // 提供且只提供 全参构造方法 和 属性获取方法
-// 中途不能修改属性
-// 重写 equals hashcode toString 方法
+// 并重写 equals hashcode toString 方法
+// 但中途不能修改属性
 public record User(Long userId, String name) {}
 ```
 
@@ -863,63 +896,6 @@ public record User(Long userId, String name) {}
       }
   }
   ```
-
-
-
-
-
-
-
-## 锁
-
-### 自旋锁
-
-- 代码实现
-
-  - ```java
-    public void add() {
-        /* 悲观锁、互斥锁、同步锁
-        synchronized (this) {
-            num++;
-         }*/
-        
-        //atomicInteger.addAndGet(1);
-        while (true) {
-            int oldValue = atomicInteger.get();
-            int newValue = oldValue + 1;
-            if (atomicInteger.compareAndSet(oldValue, newValue)) {
-                break;
-            }
-        }
-    	}
-    ```
-
-- 注意事项
-
-  - compareAndSet 方法的原子性问题：由汇编语言实现缓存行锁/总线锁实现原子性
-  - ABA问题
-    - 概述：线程1准备将 A 改为 C，线程2在此期间将 A 改为 B 后又改为 A，线程1可以修改成功
-    - 避免方式：使用 版本Version 机制。
-      - AtomicStampedReference 的api实现了Version机制
-
-
-
-
-
-### synchronized
-
-- 锁升级
-  - ![锁升级](D:\picture\typora\java\锁升级.png)
-
-- 对象的组成结构
-  - 对象头
-  - 实例数据
-  - 对齐填充位
-  - ![对象组成](D:\picture\typora\java\对象组成.png)
-
-
-
-
 
 
 
