Jan. 2nd 2024 First Commit

--- a/后端2.md
+++ b/后端2.md
@@ -3495,7 +3495,7 @@ public class MyDao {
 
   - 设计一个Student的缓存类
 
-    ![盒子模型](D:\picture\typora\后端2\Student缓存类设计.png)
+    ![Student缓存类设计](D:\picture\typora\后端2\Student缓存类设计.png)
 
 - 弱引用：弱引用的机制和软引用类似，区别在于弱引用包含的对象在垃圾回收时，不管内存是否够用，都会被直接回收。在JDK1.2版之后提供了WeakReference类来实现弱引用，弱引用主要在ThreadLocal中使用。弱引用对象本身也可以用引用队列进行回收
 
