Jan. 2nd 2024 First Commit

--- a/前端.md
+++ b/前端.md
@@ -3635,7 +3635,69 @@ http://cli.vuejs.org/zh
   onePath.bezierCureTo(x1, y1, x2, y2, x3, y3)
   ```
   
-  
+
+
+
+
+
+## SVG
+
+### 基础使用
+
+```html
+<svg width="100" height="100" viewBox="25, 25, 50, 100" fill="skyblue"
+     style="border:1px solid black">
+    <circle r="50" cx="50" cy="50"/>
+</svg>
+```
+
+- width、height="宽/高"：指定SVG图像在HTML中所占据的宽高。如果不指定这两个属性，默认未300像素（宽）*150像素（高）
+
+- viewBox="坐标x, 坐标y, 宽, 高"
+
+  ```html
+  <svg width="300" height="300" viewBox="0, 0, 150, 75" fill="skyblue"
+       style="border:5px solid red">
+      <circle r="150" cx="150" cy="150"/>
+  </svg>
+  <svg width="300" height="300" viewBox="0, 0, 450, 600" fill="skyblue"
+       style="border:5px solid blue">
+      <circle r="150" cx="150" cy="150"/>
+  </svg>
+  <svg width="300" height="150" viewBox="225, 225, 25, 150" fill="skyblue"
+       style="border:5px solid green">
+      <circle r="150" cx="150" cy="150"/>
+  </svg>
+  ```
+
+  ![SVG的viewBox属性](D:\picture\typora\前端\SVG的viewBox属性.png)
+
+- css属性
+
+  - fill=none ：填充颜色
+  - stroke=rgb() ：描边色
+  - stroke-width：边框宽度
+
+
+
+### 常用标签及属性
+
+- 通用属性
+  - fill="none"：不填充颜色
+  - stroke="black"：描边色为黑色
+  - stroke-width="10"：边框宽度为10
+
+- \<circle>：圆
+  - cx="30"：圆心横坐标为30
+  - cy="30"：圆心纵坐标为30
+  - r="25"：半径为25
+- \<line>：线段
+  - x1="0" y1="0"：起点为坐标 (0, 0)
+  - x2="200" y2="300"：终点坐标为 (200, 300)
+- \<polyline>：折线
+  - point="3, 3   30, 28   18, 55"：用多个点指定一条折线
+
+
 
 
 
