Jan. 5th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -3481,6 +3481,183 @@ User selectById(int id);
 
 
 
+# JavaWeb
+
+## Tomcat
+
+- 项目结构
+
+  - 开发中的项目结构
+
+    ```tree
+    ├─项目包
+    │  └─src
+    │     ├─main
+    │     │  ├─java源代码包
+    │     │  ├─resources
+    │     │  └─webapp
+    │     │     ├─html
+    │     │     ├─js
+    │     │     ├─css
+    │     │     └─WEB-INF
+    │     │        └─web.xml
+    │     └─test
+    ```
+
+  - 部署中的项目结构
+
+    ```tree
+    ├─项目包
+    │  ├─html
+    │  ├─js
+    │  ├─css
+    │  └─WEB-INF
+    │     ├─classes（程序字节码文件）
+    │     ├─lib
+    │     └─web.xml
+    ```
+
+
+
+## Servlet
+
+### 快速入门
+
+- 使用Tomcat
+
+  - 方法1：idea设置Tomcat位置
+
+  - 方法2：maven的Tomcat内嵌插件
+
+    ```xml
+    <!-- 打包方式是war包，并通过maven插件中的tomcat7:run启动web项目 -->
+    <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+            <port>80</port>
+            <path>/</path>
+        </configuration>
+    </plugin>
+    ```
+
+- 创建web项目，导入Servlet依赖坐标
+
+  ```xml
+  <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <!-- 编译、测试环境有效，运行环境无效 -->
+      <!-- 项目部署在Tomcat上时，Tomcat中已有该jar包，所以运行时排除jar包，防止冲突 -->
+      <scope>provided</scope> 
+  </dependency>
+  ```
+
+- 创建：定义一个类，实现Servlet接口，重写接口中的方法。并加上`@WebServlet("uri")`指定uri路径的访问路径
+
+  ```java
+  @WebServlet("/demo")
+  public class ServletDemo implements Servlet {
+      @Override
+      public void service(ServletRequest servletRequest, ServletResponse servletResponse) 
+          throws ServletException, IOException {
+          System.out.println("service方法执行了");
+      }
+      
+      // ... ...
+  }
+  ```
+
+
+
+### 生命周期
+
+- Servlet运行在Servlet容器（web服务器）中，其生命周期由容器来管理，分为4个阶段
+
+  1. **加载和实例化**：**默认情况下**，当Servlet第一次被访问时，由容器创建Servlet对象
+  2. **初始化**：当Servlet实例化之后，容器将调用Servlet的 `init()` 方法初始化这个对象，完成一些如加载配置文件、创建连接等初始化工作。该方法只**调用一次**
+  3. **请求处理**：**每次**请求Servlet时，Servlet容器都会调用Servlet的 `service()` 方法对请求进行处理
+  4. **服务终止**：当需要释放内存或者容器关闭时，容器就会调用Servlet实例的 `destory()` 方法完成资源的释放。当 `destory()` 方法调用之后，容器会释放这个Servlet实例，该实例随后会被Java垃圾回收器所回收
+
+- 改变创建Servlet对象的时机 `@WebServlet(urlPatterns="/demo", loadOnStartup=1)`
+
+  - 负整数：第一次被访问时创建Servlet对象
+  - 0或正整数：服务器启动时创建Servlet对象，**数字越小，优先级越高**
+
+- Servlet 接口
+
+  ```java
+  public interface Servlet {
+      void init(ServletConfig var1) throws ServletException;
+  
+      void service(ServletRequest var1, ServletResponse var2) 
+          throws ServletException, IOException;
+      
+      void destroy();
+  
+      // 可用于返回一些信息，如作者、版本等
+      String getServletInfo();
+      
+      // init方法被调用时，会传入ServletConfig对象
+      // 将该对象作用于提升（提升为成员变量），并在init调用时赋值，即可在此方法中返回
+      ServletConfig getServletConfig();
+  }
+  ```
+
+- Servlet 体系结构
+
+  - GenericServlet 抽象类实现了Servlet接口，剩下一个 `service(...)` 方法待实现
+
+    ```java
+    public abstract class GenericServlet 
+        implements Servlet, ServletConfig, Serializable
+    ```
+
+    ```java
+    @WebServlet("/demo")
+    public class ServletDemo extends GenericServlet {
+    
+        @Override
+        public void service(ServletRequest servletRequest, ServletResponse servletResponse) 
+            throws ServletException, IOException {
+    
+        }
+    }
+    ```
+
+  - HttpServlet 类继承了 GenericServlet 抽象类，实现了 `service(...)` 方法。并将该方法按请求类型分配给 `doGet(...)`、`doPost(...)`、`doPut(...)`、`doDelete(...)`等方法执行，可通过重写这些方法得到相应的功能
+
+
+
+### 其他
+
+- urlPattern 配置
+
+  - 一个Servlet，可以配置多个访问路径：`@WebServlet(urlPatterns = {"/demo01", "/demo02"})`
+
+  - urlPattern的配置规则（若满足多个servlet路径，只会匹配一个，精确匹配的优先级高）
+    - 精确匹配：`@WebServlet("/user/select")`
+    - 目录匹配：`@WebServlet("/user/*")`
+    - 扩展名匹配：`@WebServlet("*.abc")`（不能以 **/** 开头）
+    - 任意匹配：`@WebServlet("/")`
+
+  - 存在一个名叫 `DefaultServlet` 的默认Servlet，当其他所有Servlet都无法匹配上时，会将请求交给 `DefaultServlet`。该Servlet的作用是在静态资源中（html、png等）找同路径的资源
+
+- XML配置方式编写Servlet
+
+  - Servlet从3.0版本开始支持使用注解配置，3.0之前只支持xml配置文件的配置方式
+  - 方法：略
+
+
+
+
+
+
+
+
+
 # Spring
 
 
@@ -5404,43 +5581,95 @@ afterCompletion...
 
 ## 常用插件
 
-```xml
-<!-- 设置jdk版本 -->
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.10.1</version>
-    <configuration>
-        <source>17</source>
-        <target>11</target>
-    </configuration>
-</plugin>
+- scala 编译打包插件
 
-<!-- springboot项目的常用插件，在项目打包时，把需要的各种依赖包都打到jar包中 -->
-<plugin>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-maven-plugin</artifactId>
-    <configuration>
-        <excludes>
-            <exclude>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-            </exclude>
-        </excludes>
-    </configuration>
-</plugin>
+  ```xml
+  <!-- This plugin compiles Scala files，需要 Scala 依赖 -->
+  <plugin>
+      <groupId>net.alchim31.maven</groupId>
+      <artifactId>scala-maven-plugin</artifactId>
+      <version>3.2.2</version>
+      <executions>
+          <execution>
+              <id>scala-compile-first</id>
+              <phase>process-resources</phase>
+              <goals>
+                  <goal>add-source</goal>
+                  <goal>compile</goal>
+              </goals>
+          </execution>
+          <execution>
+              <id>scala-test-compile</id>
+              <phase>process-test-resources</phase>
+              <goals>
+                  <goal>testCompile</goal>
+              </goals>
+          </execution>
+      </executions>
+  </plugin>
+  ```
 
-<!-- 将tomcat服务器嵌入项目中 -->
-<plugin>
-    <groupId>org.apache.tomcat.maven</groupId>
-    <artifactId>tomcat7-maven-plugin</artifactId>
-    <version>2.1</version>
-    <configuration>
-        <port>80</port>
-        <path>/</path>
-    </configuration>
-</plugin>
-```
+  - scala 依赖
+
+    ```xml
+    <!-- scala依赖 -->
+    <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.13.10</version>
+    </dependency>
+    ```
+
+- jdk版本插件
+
+  ```xml
+  <!-- 设置jdk版本 -->
+  <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.10.1</version>
+      <configuration>
+          <source>17</source>
+          <target>11</target>
+      </configuration>
+  </plugin>
+  ```
+
+- springboot依赖打包插件
+
+  ```xml
+  <!-- springboot项目的常用插件，在项目打包时，把需要的各种依赖包都打到jar包中 -->
+  <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+      <configuration>
+          <excludes>
+              <exclude>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+              </exclude>
+          </excludes>
+      </configuration>
+  </plugin>
+  ```
+
+- tomcat内嵌插件
+
+  ```xml
+  <!-- 将tomcat服务器嵌入项目中 -->
+  <!-- 打包方式是war包，并通过maven插件中的tomcat7:run启动web项目 -->
+  <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+      <configuration>
+          <port>80</port>
+          <path>/</path>
+      </configuration>
+  </plugin>
+  ```
+  
+  
 
 
 
